# humanoid_navigation_ws

./: .dockerignore  .gitignore  Dockerfile  Fast-LIO内存泄漏修复.md  FastDDS共享内存优化方案.md  NDT定位问题修复指南.md  Nav2控制器频率低问题诊断.md  Nav2集成FastDDS共享内存说明.md  RViz地图显示修复指南.md  debug_output-display.txt  debug_output-localization.txt  debug_output-mapping.txt  debug_output-navigation_stack.txt  debug_output-perception.txt  debug_output.txt  diagnose_tf.py  docker-compose.yaml  fix_tf_timestamp.sh  frames_2026-04-23_13.12.09.gv  showlogs.sh  start_navigation.sh  start_rslidar_with_fastdds.sh  start_websocket.sh  test  text1  坐标系修复说明.md  多核CPU性能优化指南.md  定位坐标系问题修复指南.md  性能优化诊断报告.md  解决RViz中地图和机器人乱飘问题.md  雷达SDK频率优化方案.md  雷达驱动性能优化修复方案.md
src/: README.MD  (+1 more)
src/custom_rpp_controller/: CMakeLists.txt  custom_rpp_controller.xml  package.xml
src/custom_rpp_controller/src/: regulated_pure_pursuit_with_min_angular.cpp
src/elevation_mapping_opencl/: CMakeLists.txt  package.xml
src/elevation_mapping_opencl/config/: elevation_mapping_params.yaml
src/elevation_mapping_opencl/launch/: elevation_mapping.launch.py
src/elevation_mapping_opencl/src/: elevation_map_opencl.cpp  elevation_mapping_node.cpp
src/fast_lio_robosense/: CMakeLists.txt  package.xml
src/fast_lio_robosense/config/: robosenseAiry.yaml
src/fast_lio_robosense/launch/: mapping_robosense_airy.launch.py
src/fast_lio_robosense/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/grid_map_costmap_plugin/: CMakeLists.txt  grid_map_layer_plugin.xml  package.xml
src/grid_map_costmap_plugin/plugins/: grid_map_layer.cpp
src/humanoid_bringup/: package.xml  setup.cfg  setup.py
src/humanoid_bringup/launch/: robot_mapping.launch.py  robot_real.launch.py  robot_sim.launch.py
src/humanoid_description/: CMakeLists.txt  package.xml
src/humanoid_description/launch/: display.launch.py
src/humanoid_description/urdf/: HU_D04_01.urdf  humanoid_robot.urdf.xacro
src/humanoid_description/xml/: HU_D04_01.xml
src/humanoid_elevation_mapping/: CMakeLists.txt  package.xml
src/humanoid_elevation_mapping/config/: core_params.yaml  cpu_params.yaml  plugin_config.yaml
src/humanoid_elevation_mapping/launch/: elevation_mapping.launch.py  elevation_mapping_cpu.launch.py
src/humanoid_global_localization/: CMakeLists.txt  README.md  package.xml
src/humanoid_global_localization/config/: global_localization.yaml
src/humanoid_global_localization/launch/: global_localization.launch.py
src/humanoid_global_localization/src/: global_localization_node.cpp
src/humanoid_interfaces/: CMakeLists.txt  package.xml
src/humanoid_interfaces/msg/: GaitStatus.msg  TerrainInfo.msg
src/humanoid_locomotion/: package.xml  setup.cfg  setup.py
src/humanoid_locomotion/config/: facial_gestures.yaml  gestures.yaml
src/humanoid_locomotion/humanoid_locomotion/: facial_control_ui.py  facial_driver.py  gesture_control_gui_plus.py
src/humanoid_locomotion/launch/: locomotion.launch.py
src/humanoid_navigation2/: ARCHITECTURE.md  COORDINATE_VIEWER_README.md  NDT_FIX_README.md  package.xml  setup.cfg  setup.py  test.py
src/humanoid_navigation2/config/: nav2_params_mppi.yaml  nav2_params_rpp.yaml  slam_toolbox_map_only.yaml  slam_toolbox_mapping.yaml  slam_toolbox_params.yaml
src/humanoid_navigation2/humanoid_navigation2/: imu_transformer.py  lidar_imu_time_calibrator.py  map_converter.py  map_coordinate_viewer.py  measure_timestamp_diff.py  nav2_motion_monitor.py  periodic_clearing_3d_publisher.py  periodic_clearing_publisher.py  robot_realpose_publisher.py  save_pcd_map.py  sim_circle_pose.py  sim_rotate_pose.py  velocity_tester_gui.py
src/humanoid_navigation2/launch/: map_coordinate_viewer.launch.py  mapping_only.launch.py  navigation2.launch.py  navigation2_fixed.launch.py  navigation_stack.launch.py
src/humanoid_navigation2/maps/: hall.pgm  hall.yaml
src/humanoid_navigation2/rviz/: mapping.rviz  navigation.rviz
src/humanoid_navigation2/scripts/: diagnose_nav.sh  diagnose_rviz_map.sh  pcd_converter.py
src/humanoid_point_cloud_filter/: CMakeLists.txt  package.xml
src/humanoid_point_cloud_filter/config/: point_cloud_filter_config.yaml
src/humanoid_point_cloud_filter/include/: moving_object_filter.hpp
src/humanoid_point_cloud_filter/launch/: point_cloud_filter.launch.py
src/humanoid_point_cloud_filter/src/: point_cloud_filter_core.cpp  point_cloud_filter_node.cpp  sycl_kernels.cpp
src/humanoid_relocalization/: CMakeLists.txt  package.xml
src/humanoid_relocalization/config/: relocalization_params.yaml
src/humanoid_relocalization/launch/: relocalization.launch.py
src/humanoid_relocalization/scripts/: build_sc_database.py
src/humanoid_relocalization/src/: relocalization_node.cpp  scan_context.cpp
src/humanoid_roi_obstacle_detector/: README.md  package.xml  setup.cfg  setup.py
src/humanoid_roi_obstacle_detector/config/: roi_obstacle_detector.yaml
src/humanoid_roi_obstacle_detector/docs/: parameters.md  rosbag_validation.md
src/humanoid_roi_obstacle_detector/humanoid_roi_obstacle_detector/: roi_obstacle_detector_node.py
src/humanoid_roi_obstacle_detector/launch/: roi_obstacle_detector.launch.py
src/humanoid_terrain_analyzer/: CMakeLists.txt  package.xml
src/humanoid_terrain_analyzer/config/: terrain_analyzer.yaml
src/humanoid_terrain_analyzer/kernels/: terrain_analyzer.cl
src/humanoid_terrain_analyzer/launch/: terrain_analyzer.launch.py
src/humanoid_terrain_analyzer/src/: terrain_analyzer_core.cpp  terrain_analyzer_node.cpp
src/humanoid_websocket/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test.py
src/humanoid_websocket/config/: robot_config.yaml  websocket_config.yaml
src/humanoid_websocket/humanoid_websocket/: __init__.py  data_integration_node.py  message_bridge.py  omni_teleop_keyboard.py  synthetic_data_publisher.py  websocket_client.py  websocket_server.py
src/humanoid_websocket/launch/: websocket_client.launch.py  websocket_server.launch.py
src/humanoid_websocket/scripts/: message_bridge_node.py  websocket_client_node.py  websocket_server_node.py
src/ndt_localizer/: CMakeLists.txt  package.xml
(+80 files in other folders)
