<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_rpp_controller</name>
  <version>1.0.0</version>
  <description>自定义 Regulated Pure Pursuit 控制器，添加最小角速度限制</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_core</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
