<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_bringup</name>
  <version>1.0.0</version>
  <description>The humanoid robot bringup package, unifying perception, navigation, and web communication.</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 核心运行依赖：这里列出了你所有的功能包，确保启动时它们已被安装 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <exec_depend>humanoid_description</exec_depend>
  <exec_depend>humanoid_navigation2</exec_depend>
  <exec_depend>humanoid_navigation</exec_depend>
  <exec_depend>humanoid_websocket</exec_depend>
  <exec_depend>humanoid_elevation_mapping</exec_depend>
  <exec_depend>fast_lio_robosense</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>