<?xml version="1.0"?>
<package format="3">
  <name>humanoid_description</name>
  <version>0.0.1</version>
  <description>Humanoid robot description package</description>
  <maintainer email="linx@mxdynamics.com">linxdynamics</maintainer>
  <license>TODO</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 编译依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <!-- 导出依赖 -->
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
 
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>