<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_locomotion</name>
  <version>1.1.0</version>
  <description>逐际机器人(Limx Oli EDU) 全身运动控制包，包含步态生成、动作库管理与指令融合</description>
  <maintainer email="1243235936@qq.com">User</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 核心依赖：确保这些包在系统上已安装 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>


  <exec_depend>humanoid_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>