<?xml version="1.0"?>
<package format="3">
  <name>humanoid_point_cloud_filter</name>
  <version>1.0.0</version>
  <description>高性能点云滤波节点，支持 SYCL/OpenMP</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>