<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>humanoid_relocalization</name>
  <version>1.0.0</version>
  <description>3D relocalization using Scan Context and ICP for humanoid robot</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>eigen</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>